@@ -142,6 +142,76 @@
                 "No registration for type IEnumerable<IEnumerable<T>> could be found.", action);
         }
 
+        [TestMethod]
+        public void GetInstance_RegisteredConcreteTypeWithMissingDependency_DoesNotThrowMessageAboutMissingRegistration()
+        {
+            // Arrange
+            var container = ContainerFactory.New();
+
+            container.Register<FakeUserService>();
+
+            // Act
+            Action action = () => container.GetInstance<FakeUserService>();
+            
+            // Assert
+            AssertThat.ThrowsWithExceptionMessageDoesNotContain<ActivationException>(
+                "No registration for type FakeUserService could be found", action);
+        }
+
+        [TestMethod]
+        public void GetInstance_RegisteredAbstractionWithImplementationWithMissingDependency_DoesNotThrowMessageAboutMissingRegistration()
+        {
+            // Arrange
+            var container = ContainerFactory.New();
+
+            container.Register<UserServiceBase, FakeUserService>();
+
+            // Act
+            Action action = () => container.GetInstance<UserServiceBase>();
+            
+            // Assert
+            AssertThat.ThrowsWithExceptionMessageDoesNotContain<ActivationException>(
+                "No registration for type FakeUserService could be found", action);
+        }
+
+        [TestMethod]
+        public void GetInstance_NonRootTypeRegistrationWithMissingDependency_DoesNotThrowMessageAboutMissingRegistration()
+        {
+            // Arrange
+            var container = ContainerFactory.New();
+
+            // FakeUserService depends on IUserRepository
+            container.Register<UserServiceBase, FakeUserService>();
+
+            // SomeUserRepository depends on IPlugin, but that isn't registered
+            container.Register<IUserRepository, PluginDependantUserRepository>();
+
+            // Act
+            Action action = () => container.GetInstance<UserServiceBase>();
+            
+            // Assert
+            AssertThat.ThrowsWithExceptionMessageDoesNotContain<ActivationException>(
+                "No registration for type PluginDependantUserRepository could be found", action);
+        }
+
+        [TestMethod]
+        public void GetInstance_UnregisteredConcreteTypeWithMissingDependency_ThrowsExceptionAboutMissingRegistration()
+        {
+            // Arrange
+            var container = ContainerFactory.New();
+
+            // Act
+            // FakeUserService depends on IUserRepository but this abstraction is not registered.
+            Action action = () => container.GetInstance<FakeUserService>();
+
+            // Assert
+            AssertThat.ThrowsWithExceptionMessageContains<ActivationException>(@"
+                No registration for type FakeUserService could be found and an implicit registration 
+                could not be made."
+                .TrimInside(),
+                action);
+        }
+
         //// Seems like there are tests missing, but all other cases are already covered by other test classes.
 
         public class SomeGenericNastyness<TBla>
